# test_thrift_py

./: CMakeLists.txt  TaskPlanningClient.cpp  TextTaskPlanningServer.cpp  task-planning.i  task-planning.thrift  test.py
